roaring_dart/lib/generated_bindings.dart


  /// Computes the intersection between two bitmaps and returns new bitmap. The
  /// caller is responsible for memory management.
  ///
  /// Performance hint: if you are computing the intersection between several
  /// bitmaps, two-by-two, it is best to start with the smallest bitmap.
  /// You may also rely on roaring_bitmap_and_inplace to avoid creating
  /// many temporary bitmaps.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_and(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_and(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_andPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_and');
  late final _roaring_bitmap_and = _roaring_bitmap_andPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Computes the size of the intersection between two bitmaps.
  int roaring_bitmap_and_cardinality(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_and_cardinality(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_and_cardinalityPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<roaring_bitmap_t>,
                  ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_and_cardinality');
  late final _roaring_bitmap_and_cardinality =
      _roaring_bitmap_and_cardinalityPtr.asFunction<
          int Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Check whether two bitmaps intersect.
  bool roaring_bitmap_intersect(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_intersect(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_intersectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_intersect');
  late final _roaring_bitmap_intersect =
      _roaring_bitmap_intersectPtr.asFunction<
          bool Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Check whether a bitmap and a closed range intersect.
  bool roaring_bitmap_intersect_with_range(
    ffi.Pointer<roaring_bitmap_t> bm,
    int x,
    int y,
  ) {
    return _roaring_bitmap_intersect_with_range(
      bm,
      x,
      y,
    );
  }

  late final _roaring_bitmap_intersect_with_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint64,
              ffi.Uint64)>>('roaring_bitmap_intersect_with_range');
  late final _roaring_bitmap_intersect_with_range =
      _roaring_bitmap_intersect_with_rangePtr
          .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// Computes the Jaccard index between two bitmaps. (Also known as the Tanimoto
  /// distance, or the Jaccard similarity coefficient)
  ///
  /// The Jaccard index is undefined if both bitmaps are empty.
  double roaring_bitmap_jaccard_index(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_jaccard_index(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_jaccard_indexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_jaccard_index');
  late final _roaring_bitmap_jaccard_index =
      _roaring_bitmap_jaccard_indexPtr.asFunction<
          double Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Computes the size of the union between two bitmaps.
  int roaring_bitmap_or_cardinality(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_or_cardinality(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_or_cardinalityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_or_cardinality');
  late final _roaring_bitmap_or_cardinality =
      _roaring_bitmap_or_cardinalityPtr.asFunction<
          int Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Computes the size of the difference (andnot) between two bitmaps.
  int roaring_bitmap_andnot_cardinality(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_andnot_cardinality(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_andnot_cardinalityPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<roaring_bitmap_t>,
                  ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_andnot_cardinality');
  late final _roaring_bitmap_andnot_cardinality =
      _roaring_bitmap_andnot_cardinalityPtr.asFunction<
          int Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Computes the size of the symmetric difference (xor) between two bitmaps.
  int roaring_bitmap_xor_cardinality(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_xor_cardinality(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_xor_cardinalityPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<roaring_bitmap_t>,
                  ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_xor_cardinality');
  late final _roaring_bitmap_xor_cardinality =
      _roaring_bitmap_xor_cardinalityPtr.asFunction<
          int Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Inplace version of `roaring_bitmap_and()`, modifies r1
  /// r1 == r2 is allowed.
  ///
  /// Performance hint: if you are computing the intersection between several
  /// bitmaps, two-by-two, it is best to start with the smallest bitmap.
  void roaring_bitmap_and_inplace(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_and_inplace(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_and_inplacePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_and_inplace');
  late final _roaring_bitmap_and_inplace =
      _roaring_bitmap_and_inplacePtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Computes the union between two bitmaps and returns new bitmap. The caller is
  /// responsible for memory management.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_or(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_or(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_orPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_or');
  late final _roaring_bitmap_or = _roaring_bitmap_orPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Inplace version of `roaring_bitmap_or(), modifies r1.
  /// TODO: decide whether r1 == r2 ok
  void roaring_bitmap_or_inplace(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_or_inplace(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_or_inplacePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_or_inplace');
  late final _roaring_bitmap_or_inplace =
      _roaring_bitmap_or_inplacePtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Compute the union of 'number' bitmaps.
  /// Caller is responsible for freeing the result.
  /// See also `roaring_bitmap_or_many_heap()`
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_or_many(
    int number,
    ffi.Pointer<ffi.Pointer<roaring_bitmap_t>> rs,
  ) {
    return _roaring_bitmap_or_many(
      number,
      rs,
    );
  }

  late final _roaring_bitmap_or_manyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<roaring_bitmap_t> Function(
                  ffi.Size, ffi.Pointer<ffi.Pointer<roaring_bitmap_t>>)>>(
      'roaring_bitmap_or_many');
  late final _roaring_bitmap_or_many = _roaring_bitmap_or_manyPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          int, ffi.Pointer<ffi.Pointer<roaring_bitmap_t>>)>();

  /// Compute the union of 'number' bitmaps using a heap. This can sometimes be
  /// faster than `roaring_bitmap_or_many() which uses a naive algorithm.
  /// Caller is responsible for freeing the result.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_or_many_heap(
    int number,
    ffi.Pointer<ffi.Pointer<roaring_bitmap_t>> rs,
  ) {
    return _roaring_bitmap_or_many_heap(
      number,
      rs,
    );
  }

  late final _roaring_bitmap_or_many_heapPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<roaring_bitmap_t> Function(
                  ffi.Uint32, ffi.Pointer<ffi.Pointer<roaring_bitmap_t>>)>>(
      'roaring_bitmap_or_many_heap');
  late final _roaring_bitmap_or_many_heap =
      _roaring_bitmap_or_many_heapPtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              int, ffi.Pointer<ffi.Pointer<roaring_bitmap_t>>)>();

  /// Computes the symmetric difference (xor) between two bitmaps
  /// and returns new bitmap. The caller is responsible for memory management.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_xor(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_xor(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_xorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_xor');
  late final _roaring_bitmap_xor = _roaring_bitmap_xorPtr.asFunction<
      ffi.Pointer<roaring_bitmap_t> Function(
          ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Inplace version of roaring_bitmap_xor, modifies r1, r1 != r2.
  void roaring_bitmap_xor_inplace(
    ffi.Pointer<roaring_bitmap_t> r1,
    ffi.Pointer<roaring_bitmap_t> r2,
  ) {
    return _roaring_bitmap_xor_inplace(
      r1,
      r2,
    );
  }

  late final _roaring_bitmap_xor_inplacePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_xor_inplace');
  late final _roaring_bitmap_xor_inplace =
      _roaring_bitmap_xor_inplacePtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<roaring_bitmap_t>)>();

  /// Compute the xor of 'number' bitmaps.
  /// Caller is responsible for freeing the result.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_xor_many(
    int number,
    ffi.Pointer<ffi.Pointer<roaring_bitmap_t>> rs,
  ) {
    return _roaring_bitmap_xor_many(
      number,
      rs,
    );
  }
